--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.0",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
